# Math-Engineering-in-Data-Science

Data Structures and Algorithms/Practica 1 Versio definitiva/: CMakeLists.txt
Data Structures and Algorithms/Practica 1 Versio definitiva/data/: data_dict.tsv
Data Structures and Algorithms/Practica 1 Versio definitiva/include/: hash_table.h  linked_list.h  test.h  utils.h  word_info.h
Data Structures and Algorithms/Practica 1 Versio definitiva/src/: hash_table.c  linked_list.c  main.c  test.c  utils.c  word_info.c
Data Structures and Algorithms/Practica 2 revisada/: CMakeLists.txt
Data Structures and Algorithms/Practica 2 revisada/include/: commons.h  main.h  tree.h  word_info.h
Data Structures and Algorithms/Practica 2 revisada/src/: file_utils.c  main.c  tree.c  word_info.c
Data Structures and Algorithms/Seminar 1 act/: CMakeLists.txt  main.c  seminar-refstruct-exercises.c  seminar-refstruct-exercises.h
Data Structures and Algorithms/Seminar 2 Actualizacion/: CMakeLists.txt  common.h  main.c  seminar-files-exercises.c  seminar-files-exercises.h
Data Structures and Algorithms/Seminar 4/: CMakeLists.txt  main.c  seminar-recursion-exercises.c  seminar-recursion-exercises.h
Intro to Programming/: Finalitzat conecta 4.py
Introduction to Network Science/: U172951_Mario_Muñoz_Serrano_ps05_network_models(2).ipynb  U172951_Mario_Muñoz_Serrano_ps08_components_k_cores(2).ipynb  U172951_Mario_Muñoz_Serrano_ps09_viral_propagation(2).ipynb  ps04_networks_from_text(1)(2).ipynb
Numerical Methods/LAB3/: burger.pyde
Numerical Methods/Lab 4/: Lab 4.pyde
